<resources>
    <string name="app_name">tp_3_4_navigation_drawer</string>
    <string name="button">Button</string>
    <string name="import_btn">Import</string>
    <string name="gallery">Gallery</string>
    <string name="slideshow">Slideshow</string>
    <string name="tools">Tools</string>
    <string name="share">Share</string>
    <string name="send">Send</string>
    <string name="navigation_drawer">Navigation Drawer !</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
</resources>